# parallel-ralph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_ZH.md  pyproject.toml  ralph.sh
.github/workflows/: test.yml
.ralph/scripts/: acceptance.py  append_verdict.py  run_batch.py
examples/openapi-impl/: README.md  init.sh  openapi.yaml
examples/openapi-impl/baseline/: prd.json  progress.txt
examples/openapi-impl/baseline/stories/: manifest.json
examples/sample-jsonl/: README.md  init.sh
examples/sample-jsonl/baseline/: prd.json  progress.txt
examples/sample-jsonl/baseline/stories/: batch-001.jsonl  batch-002.jsonl  manifest.json
scripts_4x/: PROMPT.md.tmpl  audit_shards.py  dashboard.sh  merge_shards.py  monitor_shards.py  recover_shards_after_limit.sh  redistribute_remaining.py  render_shards.py  run_shards.sh  stop_shards.sh
scripts_4x/hooks/: deny_outside_shard.py
tests/: conftest.py  test_acceptance_gates.py  test_audit_shards.py  test_deny_outside_shard.py  test_render_shards.py
